--- a/styles/maincss.css
+++ b/styles/maincss.css
@@ -1,19 +1,44 @@
-.header {
-  background-color: red;
+.banner {
+  background-image: url("../images/banner.jpg");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+  height: 450px;
 }
 
-.main {
-  background-color: green; 
+.section1 {
+  background-image: url("../images/section1.jpg");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+  height: 450px;
 }
 
-.contact{
-  background-color: rgb(0, 225, 255);
+.section2{
+  background-image: url("../images/section2.jpg");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+  height: 630px;
 }
 
-.footer {
-  background-color: blue;
+.section3 {
+  background-image: url("../images/section3.jpg");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+  height: 570px;
+}
+
+.section4 {
+  background-image: url("../images/section4.jpg");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+  height: 218px;
 }
 
 h2 {
   margin: 0;
+  color: white;
 }
