--- a/styles/maincss.css
+++ b/styles/maincss.css
@@ -3,15 +3,17 @@
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
-  height: 450px;
+  height: 438px;
+  background-color: #031432;
 }
 
 .section1 {
   background-image: url("../images/section1.jpg");
-  background-position: center; /* Center the image */
+  background-position: left; 
   background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover; /* Resize the background image to cover the entire container */
+  background-size: auto; /* Resize the background image to cover the entire container */
   height: 450px;
+  background-color: #013861;
 }
 
 .section2{
@@ -20,6 +22,7 @@
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
   height: 630px;
+  background-color: #141414;
 }
 
 .section3 {
@@ -28,14 +31,17 @@
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
   height: 570px;
+  background-color: #141414;
 }
 
 .section4 {
-  background-image: url("../images/section4.jpg");
+  /*background-image: url("../images/section4.jpg");*/
+  background-color: #141414;
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
   height: 218px;
+  background-color: #141414;
 }
 
 h2 {
