--- a/styles/main-menu.css
+++ b/styles/main-menu.css
@@ -1,46 +1,51 @@
-.main-menu > ul.topnav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #141414;
-    font-family: 'Roboto';
-    font-weight: bold;
-    font-size: 18px;
-  }
-  
-  .main-menu > ul.topnav li {
-    float: left;
-  }
-  
-  .main-menu > ul.topnav li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 30px 8px;
-    text-decoration: none;
-  }
+@font-face {
+  font-family: "roboto";
+  src: url("/fonts/Roboto-Black.ttf");
+  font-weight: bold;
+  font-style: normal;
+}
 
-  a.logo{
-    padding: 0 !important;
+.main-menu > ul.topnav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #141414;
+  font-family: roboto;
+  font-size: 18px;
+}
+
+.main-menu > ul.topnav li {
+  float: left;
+}
+
+.main-menu > ul.topnav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 30px 8px;
+  text-decoration: none;
+}
+
+a.logo {
+  padding: 0 !important;
+}
+
+.main-menu > ul.topnav li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.main-menu > ul.topnav li a.active {
+  background-color: #4caf50;
+}
+
+.main-menu > ul.topnav li.right {
+  float: right;
+}
+
+@media screen and (max-width: 600px) {
+  ul.topnav li.right,
+  ul.topnav li {
+    float: none;
   }
-  
-  .main-menu >ul.topnav li a:hover:not(.active) {
-    background-color: #111;
-  }
-  
-  .main-menu > ul.topnav li a.active {
-    background-color: #4caf50;
-  }
-  
-  .main-menu > ul.topnav li.right {
-    float: right;
-  }
-  
-  @media screen and (max-width: 600px) {
-    ul.topnav li.right,
-    ul.topnav li {
-      float: none;
-    }
-  }
-  
+}
