--- a/styles/main-menu.css
+++ b/styles/main-menu.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "roboto";
-  src: url("/fonts/Roboto-Black.ttf");
+  src: url("https://github.com/samudex/samudex.github.io/blob/master/fonts/Roboto-Black.ttf");
   font-weight: bold;
   font-style: normal;
 }
