--- a/styles/main-menu.css
+++ b/styles/main-menu.css
@@ -1,9 +1,10 @@
 @font-face {
-  font-family: "roboto";
-  src: url("https://github.com/samudex/samudex.github.io/blob/master/fonts/Roboto-Black.ttf");
+  font-family: Roboto;
+  src: url("../samudex/fonts/Roboto-Black.ttf") format('truetype');
   font-weight: bold;
   font-style: normal;
 }
+
 
 .main-menu > ul.topnav {
   list-style-type: none;
@@ -11,7 +12,8 @@
   padding: 0;
   overflow: hidden;
   background-color: #141414;
-  font-family: roboto;
+  font-family: 'Roboto';
+  font-weight: bold;
   font-size: 18px;
 }
 
