--- a/styles/main-menu.css
+++ b/styles/main-menu.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: Roboto;
+  font-family: 'Roboto';
   src: url("../samudex/fonts/Roboto-Black.ttf") format('truetype');
   font-weight: bold;
   font-style: normal;
