--- a/styles/main-menu.css
+++ b/styles/main-menu.css
@@ -1,10 +1,9 @@
 @font-face {
-  font-family: 'Roboto';
-  src: url("./fonts/Roboto-Black.ttf") format('truetype');
-  font-weight: bold;
+  font-family: Roboto;
+  src: url('../fonts/Roboto-Black.ttf') format('truetype');
+  font-weight: normal;
   font-style: normal;
 }
-
 
 .main-menu > ul.topnav {
   list-style-type: none;
