home section 1 finished

--- a/styles/maincss.css
+++ b/styles/maincss.css
@@ -26,6 +26,7 @@
 
 .banner > .flex-container > .tiempos > p {
   margin: 0;
+  text-shadow: 1px 1px 2px #117396, 0 0 1em #ffffff, 0 0 0.2em #117396;
 }
 
 .section1 {
@@ -41,11 +42,12 @@
   font-size: 13px;
   font-family: Robotoregular;
   font-weight: normal;
+  padding-bottom: 10px;
 }
 
 @media only screen and (min-width: 768px) {
   .section-1-paragraph {
-  padding-right: 30px;
+  padding-right: 35px;
   margin-top: 4rem;
   }
 }
@@ -54,7 +56,7 @@
 
 .section2 {
   background-image: url("../images/section2.jpg");
-  background-position: center; /* Center the image */
+  background-position: 50% 0%; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
   min-height: 630px;
@@ -94,3 +96,22 @@ p {
 p.sky-stroke::before{
   content:url('../images/sky-stroke.png');
 }
+
+button{
+  margin-bottom: 20px;
+  margin-right: 20px;
+  background-color: #76bbf4;
+  border: none;
+  font-family: Roboto;
+  color: white;
+  padding: 8px 5px 5px 10px;
+  text-transform: uppercase;
+}
+
+button::after{
+  content:url('../images/chevron.png');
+  padding-left: 14px;
+  padding-right: 2px;
+  
+}
+
