--- a/styles/main-menu.css
+++ b/styles/main-menu.css
@@ -19,6 +19,12 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: titlinglight;
+  src: url('../fonts/TitlingGothicFBComp-Light.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 
 .main-menu > ul.topnav {
