--- a/styles/maincss.css
+++ b/styles/maincss.css
@@ -65,8 +65,6 @@
   padding-top: 415px;
 }
 
-
-
 .section2 > .tomo > h2.tomorrow {
   font-family: "Roboto";
   font-size: 48px;
@@ -76,7 +74,6 @@
 }
 
 @media only screen and (max-width: 600px) {
-
   .section2 > .tomo > h2.tomorrow {
     font-size: 2rem;
   }
@@ -129,12 +126,63 @@
 }
 
 .section3 {
-  background-image: url("../images/section3.jpg");
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
   min-height: 570px;
   background-color: #141414;
+}
+
+.section3 > .row > .col-md-6 {
+  min-height: 300px;
+  max-height: 300px;
+}
+
+.section3 > .row > .alpha-col {
+  background-image: url("../images/lareunion.jpg");
+  background-position: 50% 50%;
+  background-repeat: no-repeat; /* Do not repeat the image */
+  border-right: 1px solid #242424;
+  border-bottom: 1px solid #242424;
+}
+
+.section3 > .row > .beta-col {
+  background-image: url("../images/dreamville.jpg");
+  background-position: 50% 50%;
+  background-repeat: no-repeat; /* Do not repeat the image */
+  border-bottom: 1px solid #242424;
+}
+
+.section3 > .row > .gamma-col {
+  background-image: url("../images/instalaciones.jpg");
+  background-position: 50% 50%;
+  background-repeat: no-repeat; /* Do not repeat the image */
+  border-right: 1px solid #242424;
+}
+
+.section3 > .row > .col-md-6 > h3 {
+  font-family: titlinglight;
+  font-size: 48px;
+  color: #ffffff;
+  text-align: center;
+  padding: 110px 0 0 0px;
+}
+
+.section3 > .row > .col-md-6 > h3::before {
+  content: "";
+  content: url("../images/horizontal-stroke.png");
+  display: inline-block;
+  position: absolute;
+  transform: translate(0px, 10px);
+}
+
+.section3 > .row > .delta-col > h3 {
+  text-align: left;
+  padding: 0;
+}
+
+.section3 > .row > .col-md-6 > button{
+  transform: translate(389px, 53px);
 }
 
 .section4 {
@@ -163,11 +211,12 @@ p.sky-stroke::before {
 }
 
 button {
-  margin-bottom: 20px;
-  margin-right: 20px;
+  /* margin-bottom: 20px;
+  margin-right: 20px; */
   background-color: #76bbf4;
   border: none;
   font-family: Roboto;
+  font-size: 12px;
   color: white;
   padding: 8px 5px 5px 10px;
   text-transform: uppercase;
