more fixes before bed

--- a/styles/main-menu.css
+++ b/styles/main-menu.css
@@ -26,6 +26,12 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: titlingbold;
+  src: url('../fonts/TitlingGothicFBComp-Bold.otf') format('opentype');
+  font-weight: bold;
+  font-style: normal;
+}
 
 .main-menu > ul.topnav {
   list-style-type: none;
