--- a/styles/maincss.css
+++ b/styles/maincss.css
@@ -24,7 +24,7 @@ p {
   padding-bottom: 20px;
 }
 
-a.botonflecha > img{
+.banner > .flex-container > .around > a.botonflecha > img{
   position: absolute;
   transform: translate(131px, -83px);    
 }
