--- a/styles/maincss.css
+++ b/styles/maincss.css
@@ -2,6 +2,24 @@ p {
   color: white;
 }
 
+button {
+  /* margin-bottom: 20px;
+  margin-right: 20px; */
+  background-color: #76bbf4;
+  border: none;
+  font-family: Roboto;
+  font-size: 12px;
+  color: white;
+  padding: 8px 5px 5px 10px;
+  text-transform: uppercase;
+}
+
+button::after {
+  content: url("../images/chevron.png");
+  padding-left: 14px;
+  padding-right: 2px;
+}
+
 .banner {
   background-image: url("../images/banner.jpg");
   background-position: center; /* Center the image */
@@ -24,9 +42,9 @@ p {
   padding-bottom: 20px;
 }
 
-.banner > .flex-container > .around > a.botonflecha > img{
+.banner > .flex-container > .around > a.botonflecha > img {
   position: absolute;
-  transform: translate(131px, -83px);    
+  transform: translate(131px, -83px);
 }
 
 .banner > .flex-container > .tiempos {
@@ -68,6 +86,26 @@ p {
   }
 }
 
+p.around-1 {
+  font-family: titlingbold;
+  font-size: 48px;
+  max-width: 215px;
+  line-height: 3.5rem;
+  margin: 0;
+  margin-top: 2px;
+}
+
+p.around-2,
+p.around-3 {
+  font-family: titlingstand;
+  font-size: 24px;
+  margin: 0;
+}
+
+p.around-3 {
+  color: #76bbf4;
+}
+
 .section1 {
   background-image: url("../images/section1.jpg");
   background-position: 0% 100%;
@@ -87,26 +125,6 @@ p {
 .section1 > .container-fluid > .row > .col-md-7 > p.sky-stroke {
   font-family: titlingstand;
   font-size: 30px;
-}
-
-p.around-1 {
-  font-family: titlingbold;
-  font-size: 48px;
-  max-width: 215px;
-  line-height: 3.5rem;
-  margin: 0;
-  margin-top: 2px;
-}
-
-p.around-2,
-p.around-3 {
-  font-family: titlingstand;
-  font-size: 24px;
-  margin: 0;
-}
-
-p.around-3 {
-  color: #76bbf4;
 }
 
 .section-1-paragraph {
@@ -368,29 +386,11 @@ h2.helper {
   position: absolute;
   font-size: 14px;
   /* visibility: hidden; */
-  display: none;
+  /* display: none; */
 }
 
 p.sky-stroke::before {
   content: url("../images/sky-stroke.png");
-}
-
-button {
-  /* margin-bottom: 20px;
-  margin-right: 20px; */
-  background-color: #76bbf4;
-  border: none;
-  font-family: Roboto;
-  font-size: 12px;
-  color: white;
-  padding: 8px 5px 5px 10px;
-  text-transform: uppercase;
-}
-
-button::after {
-  content: url("../images/chevron.png");
-  padding-left: 14px;
-  padding-right: 2px;
 }
 
 .row {
