--- a/styles/maincss.css
+++ b/styles/maincss.css
@@ -386,7 +386,7 @@ h2.helper {
   position: absolute;
   font-size: 14px;
   /* visibility: hidden; */
-  /* display: none; */
+  display: none;
 }
 
 p.sky-stroke::before {
