--- a/styles/around.css
+++ b/styles/around.css
@@ -48,9 +48,16 @@ button::after {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  align-content: flex-end;
   min-height: 500px;
 }
+
+@media only screen and (min-width: 600px) {
+  .banner > .flex-container {
+    padding: 0 50px !important;
+    justify-content: space-between;
+  } 
+}
+
 
 .banner > .flex-container > .around {
   padding-bottom: 20px;
@@ -88,14 +95,13 @@ button::after {
   text-align: center;
 }
 
-.banner > .flex-container > .tickets > p{
+.banner > .flex-container > .tickets > p {
   text-align: left;
   font-family: Robotoregular;
   font-size: 14px;
 }
 
-.banner > .flex-container > .tickets > .button-container{
-  margin-bottom: 20px;
+.banner > .flex-container > .tickets > .button-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -103,6 +109,16 @@ button::after {
   align-content: center;
 
 }
+
+@media only screen and (max-width: 600px){
+.banner > .flex-container > .tickets > .button-container{
+  
+    margin-bottom: 20px;
+  }
+}
+
+
+
 
 .banner > .flex-container > .tickets > .button-container > button {
   width: 97px;
@@ -142,7 +158,7 @@ p.around-3 {
   background-size: cover; /* Resize the background image to cover the entire container */
   min-height: 376px;
   max-height: 376px;
-  background-color: #141414;  
+  background-color: #141414;
 }
 
 .section2 > .tomo {
@@ -182,12 +198,18 @@ p.around-3 {
   transform: translate(0px, 6px);
 }
 
-
 .section3 {
   background-image: url("../images/around-section2.png");
   min-height: 719px;
+  background-color: #141414;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
 }
 
+.section3 > .row {
+  margin: 0;
+}
 
 .section4 {
   /*background-image: url("../images/section4.jpg");*/
@@ -203,9 +225,7 @@ p.around-3 {
   padding-bottom: 5px;
 }
 
-
-
-.section4 > .vertical-line-long{
+.section4 > .vertical-line-long {
   text-align: center;
   margin-top: 33px;
 }
